--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mysql2": "^3.10.2",
+    "mysql2": "^3.11.0",
+    "nodemon": "^3.1.4",
     "typescript": "^5.5.3"
   },
   "devDependencies": {
