--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node --env-file .env src/server.js",
+    "dev": "nodemon --env-file .env src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mysql2": "^3.11.0",
-    "nodemon": "^3.1.4",
+    "nodemon": "^3.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.7.0",
